fix: fixed What I Do spacing issues at Galaxy Fold breakpoint

--- a/assets/style.css
+++ b/assets/style.css
@@ -42,7 +42,7 @@ header .current-page{
 }
 
 .logo-new {
-    width: 40vw;
+    width: 35vw;
     height: 100%;
     margin: 0;
     max-height: 44px;
@@ -312,7 +312,8 @@ footer h5 {
 
 .what-i-do-button {
     height: 85px;
-    width: 85px;
+    width: 95%;
+    max-width: 85px;
     margin: 25px auto;
     padding: 2px;
     padding-top:15px;
@@ -345,8 +346,8 @@ footer h5 {
 
 @media (min-width: 575px) {
     .what-i-do-button{
-        height: 150px;
-        width: 150px;
+        min-height: 150px;
+        min-width: 150px;
         margin: 40px auto;
     }
 
